--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "appwrite": "^18.1.1",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.544.0",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
