--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "appwrite": "^18.1.1",
-    "framer-motion": "^12.23.12",
+    "crypto-js": "^4.2.0",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.544.0",
     "nanoid": "^5.1.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
